                         PHPCheckstyle Release Notes
                         ===========================

Version 0.14.9
--------------
* Issue #93 : Use Bootstrap4 for styling (thanks to HCrane)


Version 0.14.8
--------------
* Issue #92 : checkWhiteSpaceBefore "{", unless it's in ${var}
* Issue #89 : False error "The function parameters must match those in its docblock @param" when using local variable tag


Version 0.14.7
--------------
* Issue #81 : Fail to detect private functions with spaces after function (thanks to Hans-Christian Halfbrodt)
* Fix square bracket for arrays on method assignation with test case.  (thanks to GuillermoMI)
* Add flag to force error level only on console report (thanks to Jean-Philippe Quéméner)
* Issue #82 : Cannot define independent rules for function parameter namings and local variable namings  (thanks to dpalic)
* Issue #84 : Set maximum errors for build fail (thanks to hafah)


Version 0.14.6
--------------
* Added config for Symfony standards
* Issue #70 : List the statement types in a interface
* Issue #69 : Whitespace must not follow : exception for comments
* Issue #66 : Indentation level inside an array
* Issue #65 : Indentation level should increase inside a case
* Issue #64 : Silence doc warnings when @inheritdoc is present


Version 0.14.5
--------------
* Issue #62 : Corrected the indentation level count for short array syntax
* Issue #41 : Ability to add exceptions to "unused variable" test
* Issue #24 : Grouped cases must contain a break
* Issue #23 : Added a --time option on the CLI to print the processing time
* Corrected line numbering for indentation check
* Added PHPUnit tests 
* Added Vagrant configuration files to spawn a local VirtualBox VM
* Added TravisCI configuration file
* When running from CLI PHPCheckstyle return code is now <> 0 if some errors are detected 


Version 0.14.4
--------------
* Moved the project from SourceForge to Github


Version 0.14.3
--------------
* New check : thisInStatic.

